--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> GoodMates Chrome Extestion</title>
-    <title> GoodMates | New Tab </title>
-    <link rel = "stylesheet" href="index.css">
-
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="icons/site.webmanifest">
-<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="theme-color" content="#ffffff">
+<meta name="description" content="Find a snack to eat, when you're hungury. Over 20+ Snacks and Growing, Add your own snacks, by making a issue.">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="twitter:description" content="Find a snackt to eat, when you can't think of anything"/>
+  <meta name="twitter:title" content="snackgenerator.xyz | Find a snack to eat, when you're hungury" />
+  <meta name="twitter:image" content=""/>
+  <meta name="twitter:card" content="summary_large_image">
 
 <meta author="Arav Narula">
 </head>
 
 <body>
-@ -13,7 +22,12 @@
-    <p id="fill"> </p>
-    <script src="./src/index.js"> </script>
+
+    <p id="filter"> </p>
 
    
-    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 
-
-<audio id="player" autoplay loop>
-    <source src="audio/source.mp3" type="audio/mp3">
-</audio>
 </body>
 </html>
