--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <meta name="twitter:image" content=""/>
   <meta name="twitter:card" content="summary_large_image">
 
+<link rel="stylesheet" href="./src/snack.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ 
+
 <meta author="Arav Narula">
 </head>
 
 <body>
 
-    <p id="filter"> </p>
+    <p id="filter">  test </p>
 
    
 
