--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </head>
 
 <body>
-
+  <h1> 🚀 Find a Snack </h1>
     <p id="filter">  test </p>
+  
+  <small> Credit to <a href="https://twitter.com/heybereket"> For some of the CSS and Meta Tags </small>
 
    
 
